[package]
authors = ["Jasper De Moor <jasperdemoor@gmail.com>", "Devon Govett <devongovett@gmail.com>"]
name = "parcel-watcher"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "1.2.0"
napi-derive = "1.0"
notify = "4.0.12"

[build-dependencies]
napi-build = "1.0.1"

[profile.release]
lto = true
opt-level = 3
